# Design-Pattern-Agent

Design Pattern Agent/design_pattern_agent/: DesignPattern.md  README.md  pyproject.toml
Design Pattern Agent/design_pattern_agent/src/design_pattern_agent/: design.py
Design Pattern Agent/design_pattern_agent/src/design_pattern_agent/crews/design_crew/: design_crew.py
Design Pattern Agent/design_pattern_agent/src/design_pattern_agent/crews/design_crew/config/: agents.yaml  tasks.yaml
