[project]
name = "design_pattern_agent"
version = "0.1.0"
description = "design_pattern_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.1",
]

[project.scripts]
kickoff = "design_pattern_agent.main:kickoff"
plot = "design_pattern_agent.main:plot"
design_pattern_agent = "design_pattern_agent.design:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
